external-inventory-reorder-dsl/grammar.ebnf
ReorderRule ::= 'ReorderRule for' SKU 'When' Condition 'OrderQuantity:' QuantityExpression

SKU ::= 'SKU' NumericLiteral

Condition ::= 'StockLevel' ComparisonOperator 'MinStockLevel'

ComparisonOperator ::= '<' | '>' | '<=' | '>=' | '=='

QuantityExpression ::= NumericExpression TimeFrame 'sales velocity' ArithmeticOperator Percentage

TimeFrame ::= 'weeks' | 'months'

NumericExpression ::= NumericLiteral | '(' NumericExpression ')'

ArithmeticOperator ::= '+' | '-' | '*' | '/'

Percentage ::= NumericLiteral '%'

NumericLiteral ::= Digit+

Digit ::= '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
